--- a/.env
+++ b/.env
@@ -15,10 +15,10 @@ DB_DATABASE=eq6
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
